# interview_test

./: .gitignore  README.md  pyproject.toml
assessment_test/: hooks.py  modules.txt
assessment_test/config/: desktop.py  docs.py
assessment_test/interview_test/client_scripts/: appraisal_cycle.js
